package lakehouse.api.dto;

public class TaskExecutionServiceGroupDTO extends NameDescriptionAbstract{
}
